<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".section_policeman.activities.ScanLicenseAsPoliceActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:onClick="goBack"
        android:src="@drawable/ic_back"
        android:tint="@color/colorPrimary" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/layout_loading"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <ScrollView
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_license"
                android:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_license_label"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/scan_note"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:foreground="@drawable/ripple_anim"
                android:onClick="scanLicense"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:minLines="2"
                        android:text="@string/scan_license"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_scan_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scan_fail"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_not_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Failed to verify the license. Assure that the driver has registered to the system or try again"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>