<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".section_driver.activities.ScanLicenseActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/layout_loading"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <ScrollView
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_driver"
                android:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_signup"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/scan_note"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:foreground="@drawable/ripple_anim"
                android:onClick="scanLicense"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:minLines="2"
                        android:text="@string/scan_license"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_scan_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scan_fail"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_scan_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scan_success"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="License Number"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:borderColor="@color/colorPrimary"
                app:borderWidth="2dp"
                app:cornerRadius="10dp">

                <EditText
                    android:id="@+id/edit_text_license_number"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:editable="false"
                    android:hint="License Number will appear here" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Expiry Date"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:borderColor="@color/colorPrimary"
                app:borderWidth="2dp"
                app:cornerRadius="10dp">

                <EditText
                    android:id="@+id/edit_text_expiry_date"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:editable="false"
                    android:hint="Expiry date will appear here" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Name on License"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:borderColor="@color/colorPrimary"
                app:borderWidth="2dp"
                app:cornerRadius="10dp">

                <EditText
                    android:id="@+id/edit_text_name"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:editable="false"
                    android:hint="Name will appear here" />

            </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:foreground="@drawable/ripple_anim"
                android:onClick="continueSignup"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Continue"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple_anim"
                android:onClick="gotoLoginPage"
                android:text="@string/login_label"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>